--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 				<div class="app-bar">
 			<div class="container">
 				<div class="row">
-					<section class="col-xs-12">
+					<header class="col-xs-12">
 						<h2 class="wb-inv">Name of Web application</h2>
 						<a class="app-name" href="./index-en.html">Hi/Max Real Estate</a>
-					</section>
+					</header>
 				</div>
 			</div>
 		</div>
