--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
 <body>
 
 	</div>
-	<div> <!-- start of header-->
+	<header> <!-- start of header-->
 
 				<div class="app-bar">
 			<div class="container">
 				<div class="row">
-					<header class="col-xs-12">
+					<section class="col-xs-12">
 						<h2 class="wb-inv">Name of Web application</h2>
 						<a class="app-name" href="./index-en.html">Hi/Max Real Estate</a>
-					</header>
+					</section>
 				</div>
 			</div>
 		</div>
 
 
-		<div id="wb-sm" data-ajax-replace="../ajax/cdtsMenu-en.html" data-trgt="mb-pnl"
+		<nav id="wb-sm" data-ajax-replace="../ajax/cdtsMenu-en.html" data-trgt="mb-pnl"
 			class="wb-menu visible-md visible-lg wb-init wb-data-ajax-replace-inited wb-menu-inited wb-navcurr-inited"
 			typeof="SiteNavigationElement">
 			<div class="pnl-strt container nvbar">
@@ -64,9 +64,9 @@
 			</div>
 
 
-		</div> <!-- end of main navigation-->
+		</nav> <!-- end of main navigation-->
 
-	</div> <!-- end of header-->
+	</header> <!-- end of header-->
 
 	<main property="mainContentOfPage" class="container">
 		<h1>Welcome</h1>
@@ -105,7 +105,7 @@
 
 
 	</main>
-	<div id="wb-info" class=" wb-navcurr-inited">
+	<footer id="wb-info" class=" wb-navcurr-inited">
 		<div class="gc-sub-footer">
 			<div class="container d-flex align-items-center">
 				<div>
@@ -128,7 +128,7 @@
 
 			</div>
 		</div>
-	</div> <!-- end of footer-->
+	</footer> <!-- end of footer-->
 
 	<script>
 		var defFooter = document.getElementById("def-footer");
