--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html class="js backgroundsize borderimage csstransitions fontface svg" dir="ltr">
 <head>
+	<html lang="en">
 	<title>Welcome - Max Real Estate</title>
 	<script src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_1_0/wet-boew/js/i18n/en.min.js"></script>
 	<script
@@ -72,9 +73,9 @@
 		<h1>Welcome</h1>
 		<p>Content A here</p>
 		<div class="row">
-			<div class="col-md-4 pull-right">
+			<aside class="col-md-4 pull-right">
 				<p></p>Content B here
-			</div>
+			</aside>
 			<div class="col-md-8">
 				<p>Content C here</p>
 
