--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 
 	<main property="mainContentOfPage" class="container">
 		<h1>Welcome</h1>
-		<p>Content A here</p>
+		<h2>Hi/Max Real Estate & Houses </h2> 
+		<p>Buying or selling a home is likely the largest and most important transaction you’ll ever make. That’s why so many trust Hi/MAX Real Estate, which according to Canadian consumers, has been voted #1 Most Trusted Real Estate Agents in Canada six times in a row</p>
+		<a href="google.com">Lets get started</a>
 		<div class="row">
 			<aside class="col-md-4 pull-right">
 				<p></p>Content B here
@@ -159,5 +161,6 @@
 </body>
 
 </html>
+
 
 
