--- a/index.html
+++ b/index.html
@@ -79,7 +79,40 @@
 				<p></p>Content B here
 			</aside>
 			<div class="col-md-8">
-				<p>Content C here</p>
+				<p>Content C here
+				
+				<table>
+				  <col>
+				  <colgroup span="2"></colgroup>
+				  <colgroup span="2"></colgroup>
+				  <tr>
+				    <td rowspan="2">Year</td>
+				    <th colspan="2" scope="colgroup">Sold Properties</th>
+				    <th colspan="2" scope="colgroup">Average selling price</th>
+				  </tr>
+				  <tr>
+				    <th scope="col">Quebec</th>
+				    <th scope="col">Ontario</th>
+				    <th scope="col">Single house</th>
+				    <th scope="col">Condo</th>
+				  </tr>
+				  <tr>
+				    <th scope="row">2021</th>
+				    <td>50</td>
+				    <td>100</td>
+				    <td>$500,000</td>
+				    <td>189,000</td>
+				  </tr>
+				  <tr>
+				    <th scope="row">2022</th>
+				    <td>100</td>
+				    <td>200</td>
+				    <td>$780,00</td>
+				    <td>240,000</td>
+				  </tr>
+				</table>
+				
+				</p>
 
 
 			</div>
@@ -161,6 +194,7 @@
 </body>
 
 </html>
+
 
 
 
