Added image for Content E

--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
 					<div class="row">
 						<td>
 							<div class="col-md-4 ">
-								<p>Content F here</p>
+								<p>Content F here
+									<img src="img1.png" alt="a birdhouse with the front blocked off by three pieces of wood which have the words for sale written on them.">
+								</p>
 							</div>
 						</td>
 						<td>
@@ -221,6 +223,7 @@
 </body>
 
 </html>
+
 
 
 
