--- a/index.html
+++ b/index.html
@@ -143,20 +143,26 @@
 					<div class="row">
 						<td>
 							<div class="col-md-4 ">
-								<p>Content F here
-									<img src="img1.png" alt="a birdhouse with the front blocked off by three pieces of wood which have the words for sale written on them.">
-								</p>
+								<a href="google.com">What Are The Risks of Selling a Home Yourself?</a>
+								<img src="1.png" alt="a birdhouse with the front blocked off by three pieces of wood which have the words for sale written on them.">
+								<p>We’ve all seen the videos, read the stories, and gasped at the images of people who thought they could conquer a project that would have been better left to the professionals. </p>
+								<a href="google.com">Read more</a>
+								<p>Content F here</p>
 							</div>
 						</td>
 						<td>
 							<div class="col-md-4">
+								<img src="2.png" alt="one of our consultants listening intently to a customer.">
+								<a href="google.com">7 Questions to Ask a Real Estate Agent Before You Commit</a>
+								<p>According to research by the National Association of Realtors, there are considerable benefits to working with a real estate agent, including higher sale prices. </p>
 								<p>Content G here</p>
 							</div>
 						</td>
 						<td>
-							<div class="col-md-4">
-								<p>Content H here</p>
-							</div>
+							<img src="3.png" alt="one of our agents putting up a for sale sign outside of a red brick house.">
+							<a href="google.com"> 8 Reasons to Hire an Agent When Selling Your Home</a>
+							<p> With all the many different moving parts involved in selling your home, here are eight very valid reasons to have a real estate agent on speed dial.</p>
+							<p>Content H here </p>
 						</td>
 					</div>
 				</tr>				
@@ -223,6 +229,7 @@
 </body>
 
 </html>
+
 
 
 
