--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<div>
 					<h3 class="wb-inv" id="aboutWebApp">Hi/Max Real Estate</h3>
 					<ul>
-						<li><a href="google.com">About the company</a></li>
+						<li><a href="https://www.google.com/">About the company</a></li>
 						<li><a href="google.com">Privacy policy</a></li>
 						<li><a href="google.com">Accessibility statement</a></li>
 						<li style="list-style: none;" class="social">
@@ -229,6 +229,7 @@
 </body>
 
 </html>
+
 
 
 
