--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 
 	</header> <!-- end of header-->
 	<main property="mainContentOfPage" class="container">
-			<h1>Welcome</h1>
+			<h1 id="#wb-cont">Welcome</h1>
 			<table>
 				<tr>
 					<td>
 						<p>Content A</p>
 						<h2>Hi/Max Real Estate & Houses </h2> 
 						<p>Buying or selling a home is likely the largest and most important transaction you’ll ever make. That’s why so many trust Hi/MAX Real Estate, which according to Canadian consumers, has been voted #1 Most Trusted Real Estate Agents in Canada six times in a row</p>
-						<a href="google.com">Lets get started</a>
+						<a href="https://www.google.com/">Lets get started</a>
 					</td>
 				</tr>
 				<tr>
@@ -123,9 +123,9 @@
 								<h2>Related resources</h2>
 								<p>It's time to sell and find the next "one". Let us help you navigate the ins & outs of your next move. </p>
 							<ul>
-								<li><a href="google.com">Looking for an upgrade</a></li>
-								<li><a href="google.com">Buying tips</a></li>
-								<li><a href="google.com">How much is your current home worth?</a></li>
+								<li><a href="https://www.google.com/">Looking for an upgrade</a></li>
+								<li><a href="https://www.google.com/">Buying tips</a></li>
+								<li><a href="https://www.google.com/">How much is your current home worth?</a></li>
 							</ul>
 							</aside>
 						</div>
@@ -144,23 +144,23 @@
 						<td>
 							<div class="col-md-4 ">
 								<img src="1.png" alt="a birdhouse with the front blocked off by three pieces of wood which have the words for sale written on them.">
-								<a href="google.com">What Are The Risks of Selling a Home Yourself?</a>
+								<a href="https://www.google.com/">What Are The Risks of Selling a Home Yourself?</a>
 								<p>We’ve all seen the videos, read the stories, and gasped at the images of people who thought they could conquer a project that would have been better left to the professionals. </p>
-								<a href="google.com">Read more</a>
+								<a href="https://www.google.com/">Read more</a>
 								<p>Content F</p>
 							</div>
 						</td>
 						<td>
 							<div class="col-md-4">
 								<img src="2.png" alt="one of our consultants listening intently to a customer.">
-								<a href="google.com">7 Questions to Ask a Real Estate Agent Before You Commit</a>
+								<a href="https://www.google.com/">7 Questions to Ask a Real Estate Agent Before You Commit</a>
 								<p>According to research by the National Association of Realtors, there are considerable benefits to working with a real estate agent, including higher sale prices. </p>
 								<p>Content G</p>
 							</div>
 						</td>
 						<td>
 							<img src="3.png" alt="one of our agents putting up a for sale sign outside of a red brick house.">
-							<a href="google.com"> 8 Reasons to Hire an Agent When Selling Your Home</a>
+							<a href="https://www.google.com/"> 8 Reasons to Hire an Agent When Selling Your Home</a>
 							<p> With all the many different moving parts involved in selling your home, here are eight very valid reasons to have a real estate agent on speed dial.</p>
 							<p>Content H </p>
 						</td>
@@ -183,10 +183,10 @@
 					<h3 class="wb-inv" id="aboutWebApp">Hi/Max Real Estate</h3>
 					<ul>
 						<li><a href="https://www.google.com/">About the company</a></li>
-						<li><a href="google.com">Privacy policy</a></li>
-						<li><a href="google.com">Accessibility statement</a></li>
+						<li><a href="https://www.google.com/">Privacy policy</a></li>
+						<li><a href="https://www.google.com/">Accessibility statement</a></li>
 						<li style="list-style: none;" class="social">
-						<a href="www.google.com" alt= "Twitter"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+						<a href="https://www.google.com/" alt= "Twitter"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 						  <path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"></path>
 						</svg></a></li>
 						
@@ -229,6 +229,7 @@
 </body>
 
 </html>
+
 
 
 
