--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<p>Content A</p>
 						<h2>Hi/Max Real Estate & Houses </h2> 
 						<p>Buying or selling a home is likely the largest and most important transaction you’ll ever make. That’s why so many trust Hi/MAX Real Estate, which according to Canadian consumers, has been voted #1 Most Trusted Real Estate Agents in Canada six times in a row</p>
-						<a href="https://www.google.com/">Lets get started</a>
+						<a href="https://www.google.com/"> Click for more information about us. </a>
 					</td>
 				</tr>
 				<tr>
@@ -147,7 +147,7 @@
 								<br>
 								<a href="https://www.google.com/">What Are The Risks of Selling a Home Yourself?</a>
 								<p>We’ve all seen the videos, read the stories, and gasped at the images of people who thought they could conquer a project that would have been better left to the professionals. </p>
-								<a href="https://www.google.com/">Read more</a>
+								<a href="https://www.google.com/">Read more about selling your home</a>
 								<p>Content F</p>
 							</div>
 						</td>
@@ -189,9 +189,13 @@
 						<li><a href="https://www.google.com/">Privacy policy</a></li>
 						<li><a href="https://www.google.com/">Accessibility statement</a></li>
 						<li style="list-style: none;" class="social">
-						<a href="https://www.google.com/" alt= "Twitter"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-						  <path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"></path>
-						</svg></a></li>
+						<a href="https://www.google.com/" alt= "Twitter">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+								<title id="TwitterSVG">Twitter</title>
+						  		<path d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"></path>
+							</svg>
+						</a>
+						</li>
 						
 					  </ul>	
 				</div>
@@ -232,6 +236,7 @@
 </body>
 
 </html>
+
 
 
 
