--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 
 	</header> <!-- end of header-->
 	<main property="mainContentOfPage" class="container">
-			<h1 id="#wb-cont">Welcome</h1>
+			<h1 id="wb-cont">Welcome</h1>
 			<table>
 				<tr>
 					<td>
 						<p>Content A</p>
 						<h2>Hi/Max Real Estate & Houses </h2> 
 						<p>Buying or selling a home is likely the largest and most important transaction you’ll ever make. That’s why so many trust Hi/MAX Real Estate, which according to Canadian consumers, has been voted #1 Most Trusted Real Estate Agents in Canada six times in a row</p>
-						<a href="https://www.google.com/"> Click for more information about us. </a>
+						<a href="https://www.google.com/"> Click for more information about Hi/Max Real Estate & Houses. </a>
 					</td>
 				</tr>
 				<tr>
@@ -236,6 +236,7 @@
 </body>
 
 </html>
+
 
 
 
