--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="container">
 				<div class="row">
 					<section class="col-xs-12">
-						<h2 class="wb-inv">Name of Web application</h2>
+						<h2 class="wb-inv" color: rgb(256, 256, 256)>Hi/Max Real Estate</h2>
 						<a class="app-name" href="./index-en.html">Hi/Max Real Estate</a>
 					</section>
 				</div>
@@ -50,15 +50,15 @@
 				<h2>Topics menu</h2>
 				<div class="row">
 					<ul role="menubar" class="list-inline menu">
-						<li><a class="item" href="index-en.html" tabindex="0" aria-posinset="1" aria-setsize="7"
+						<li><a class="item" href="https://www.google.com" tabindex="0" aria-posinset="1" aria-setsize="7"
 								role="menuitem">Home</a></li>
-						<li><a class="item" href="internet-en.html" tabindex="-1" aria-posinset="2" aria-setsize="7"
+						<li><a class="item" href="https://www.google.com" tabindex="-1" aria-posinset="2" aria-setsize="7"
 								role="menuitem">Buying</a></li>
-						<li><a class="item" href="intranet-en.html" tabindex="-1" aria-posinset="3" aria-setsize="7"
+						<li><a class="item" href="https://www.google.com" tabindex="-1" aria-posinset="3" aria-setsize="7"
 								role="menuitem">Selling</a></li>
-						<li><a class="item" href="faq-en.html" tabindex="-1" aria-posinset="6" aria-setsize="7"
+						<li><a class="item" href="https://www.google.com" tabindex="-1" aria-posinset="6" aria-setsize="7"
 								role="menuitem">FAQs</a></li>
-						<li><a class="item" href="contact-en.html" tabindex="-1" aria-posinset="7" aria-setsize="7"
+						<li><a class="item" href="https://www.google.com" tabindex="-1" aria-posinset="7" aria-setsize="7"
 								role="menuitem">Contact us</a></li>
 					</ul>
 				</div>
@@ -236,6 +236,7 @@
 </body>
 
 </html>
+
 
 
 
