--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="container">
 				<div class="row">
 					<section class="col-xs-12">
-						<h2 class="wb-inv" color: rgb(256, 256, 256)>Hi/Max Real Estate</h2>
+						<h2 class="wb-inv" style="opacity: 1; color: rgb(0, 0, 0); background-color: rgb(200, 200, 200);">
 						<a class="app-name" href="./index-en.html">Hi/Max Real Estate</a>
 					</section>
 				</div>
@@ -236,6 +236,7 @@
 </body>
 
 </html>
+
 
 
 
