--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="row">
 					<ul role="menubar" class="list-inline menu">
 						<li><a class="item" href="https://www.google.com" tabindex="0" aria-posinset="1" aria-setsize="7"
-								role="menuitem">Home is where the heart is</a></li>
+								role="menuitem">Home</a></li>
 						<li><a class="item" href="https://www.google.com" tabindex="-1" aria-posinset="2" aria-setsize="7"
 								role="menuitem">Buying</a></li>
 						<li><a class="item" href="https://www.google.com" tabindex="-1" aria-posinset="3" aria-setsize="7"
